# Shellhacks-2025

./: .gitignore  1_SHODEM__training_and_validation.py  2_SHODEM__post_processing.py  3_SHODEM__Qgis_postprocessing.py  README.md  README.txt  fetch_google_data.py  num_coordinate_points.json  requirements.txt
LSTM/: analysis.py  main.py  pyproject.toml  transformer.py
backend/: coastline_mgr.py  main.py  pyproject.toml  start.sh  swaggerdocs.yaml
backend/data/future/: coastline_yearly_changes.csv
backend/src/: coastline.py  coastline_mgr.py  coastline_tree.py  future_ingest.py  hardcoded_tolerances.py  historical_ingest.py  main.py  stats.py
backend/src/ingest/: coastline.py  coastline_tree.py  historical_ingest.py
cuda/: pyproject.toml
cuda_test/: main.py
etl_pipeline/: .gitignore  etl.py  pyproject.toml
evan_work/: predict.py  preproc.py  shorelinedata.py  stats.py  vis.py
google_earth_data/: 1_does_api_work.py  5_get_1_tile_tinier_failed_attempt.py  7_final_ver_with_drive.py
test/: 2_get_1_coast_tile.py  2_get_coast_tiles.py  2_view_it.py  3_get_1_file_across_every_year.py  3_view_it.py  4_get_1_tile_across_every_year_parallized copy.py  4_get_1_tile_across_every_year_parallized.py  6_final_ver.py  6_final_ver_but_hit_max.py  7_final_ver_with_drive.py  fetch_google_data_test.py  view_it.py
transformer/: predict.py  preproc.py  shorelinedata.py  stats.py  vis.py
viz/: coastline_tree.pptx
web/: app.py  debug_map.html  guide4web.md  pyproject.toml  requirements.txt
web/data/: historical_data.csv  predicted_data.csv
web/static/: styles.css
(+1 files in other folders)
